Update Frontend.md (add <a>/<ul>/<ol>/<li>/<!----->//**/)

--- a/entries/frontend.html
+++ b/entries/frontend.html
@@ -344,6 +344,20 @@
         <h2 id="タグ-1"><code>&#x3C;label></code>タグ</h2>
         <p><code>&#x3C;input></code>タグに対応させるラベルを作成するタグです。<br><code>name</code>属性を使用して<code>&#x3C;input></code>タグに関連付けることができます。</p>
       </section>
+      <section class="level2" aria-labelledby="タグタグタグ">
+        <h2 id="タグタグタグ"><code>&#x3C;ul></code>タグ・<code>&#x3C;ol></code>タグ・<code>&#x3C;li></code>タグ</h2>
+        <p>ul: Unordered List (順序なしリスト)<br>ol: Ordered List (順序つきリスト)<br>li: List</p>
+        <p>これらのタグは、箇条書きリストを作成する時に使います。<br>箇条書きにする各行は<code>&#x3C;li></code>タグで書き、順序付きか順序なしかに応じて<code>&#x3C;ol></code>または<code>&#x3C;ul></code>で囲みます。</p>
+      </section>
+      <section class="level2" aria-labelledby="タグ-2">
+        <h2 id="タグ-2"><code>&#x3C;a></code>タグ</h2>
+        <p>a: anchor</p>
+        <p><code>&#x3C;a></code>タグはリンクを設定するタグです。<br><code>href</code>属性にリンク先を設定します。なお自分自身をリンク先に設定するときは<code>href="#"</code>と設定することもできます。</p>
+      </section>
+      <section class="level2" aria-labelledby="コメント">
+        <h2 id="コメント">コメント</h2>
+        <p>HTML(に限らずほとんどの言語)には、<strong>コメント</strong>という実際の処理では無視される文字列を含めることができます。<br>HTMLでは、<code>&#x3C;!-- ここの間に書く --></code>という書き方をします。なお複数行にまたがっても問題ありません。</p>
+      </section>
       <section class="level2" aria-labelledby="その他">
         <h2 id="その他">その他</h2>
         <p>その他にも、多くのタグが存在するので、必要に応じてMDNなどで調べてみてください。</p>
@@ -381,6 +395,10 @@
       <section class="level2" aria-labelledby="一括設定プロパティ">
         <h2 id="一括設定プロパティ">一括設定プロパティ</h2>
         <p>一部のプロパティには関連する設定を一括でできるプロパティがあります。<br>上の例の<code>border-bottom</code>などがその例です。</p>
+      </section>
+      <section class="level2" aria-labelledby="コメント-1">
+        <h2 id="コメント-1">コメント</h2>
+        <p>CSSのコメントは<code>/* ここの間に書く */</code>です。こちらも複数行にまたがっても問題ないです。</p>
       </section>
     </section>
     <section class="level1" aria-labelledby="主なcssプロパティ">
